# srdr

./: .clang-format  .gitignore  LICENSE  README.md
docs/api/: index.md  math.md  platform.md  renderer.md  scene.md  shader-interfaces.md
docs/examples/: 01-window-test.md  02-draw-triangle.md  03-depth-test.md  04-blend.md  05-perspective-projection.md  06-phong-lighting.md  index.md
src/: CMakeLists.txt
src/application/: CMakeLists.txt  app.cpp
src/application/examples/: ExampleBlend.cpp  ExampleBlend.hpp  ExampleDepthTest.cpp  ExampleDepthTest.hpp  ExampleDrawTriangle.cpp  ExampleDrawTriangle.hpp  ExamplePerspectiveProjection.cpp  ExamplePerspectiveProjection.hpp  ExamplePhongLighting.cpp  ExamplePhongLighting.hpp  ExampleWindowTest.cpp  ExampleWindowTest.hpp
src/core/: CMakeLists.txt  Color.cpp  Color.hpp  Geometry.cpp  Geometry.hpp  Matrix.hpp  Transform.cpp  Transform.hpp  Vector.cpp  Vector.hpp
src/platform/: CMakeLists.txt  IWindow.hpp  Win32Window.cpp  Win32Window.hpp  WindowFactory.cpp  WindowFactory.hpp
src/renderer/: CMakeLists.txt  FragmentShader.cpp  FragmentShader.hpp  FrameBuffer.cpp  FrameBuffer.hpp  OutputMerger.cpp  OutputMerger.hpp  PixelShader.cpp  PixelShader.hpp  PrimitiveAssembler.cpp  PrimitiveAssembler.hpp  Rasterizer.cpp  Rasterizer.hpp  Renderer.cpp  Renderer.hpp  VertexLoader.cpp  VertexLoader.hpp  VertexShader.cpp  VertexShader.hpp
src/renderer/scene/: Camera.cpp  Camera.hpp  Light.hpp
src/renderer/shader_interfaces/: ColorAttachment.cpp  ColorAttachment.hpp  DepthAttachment.cpp  DepthAttachment.hpp  DepthBuffer.cpp  DepthBuffer.hpp  Fragment.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Primitive.hpp  Vertex.hpp
src/renderer/stage/: FragmentShader.cpp  FragmentShader.hpp  OutputMerger.cpp  PrimitiveAssembler.cpp  PrimitiveAssembler.hpp  Rasterizer.cpp  VertexShader.cpp  VertexShader.hpp
